--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -5,12 +5,12 @@ $medium-breakpoint: 42em !default;
 // Headers
 $header-heading-color: #fff !default;
 $header-bg-color: #6200EA !default;
-$header-bg-color-secondary: #7C4DFF !default;
+$header-bg-color-secondary: #B388FF !default;
 
 // Text
 $section-headings-color: #6200EA !default;
 $body-text-color: #000000DE !default;
-$body-link-color: #1e6bb8 !default;
+$body-link-color: #0366d6 !default;
 $blockquote-text-color: #819198 !default;
 
 // Code
