--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <a href="{{ site.github.repository_url }}" class="btn">⭐ Star on GitHub</a>
-      <a href="{{ site.github.repository_url }}" class="btn">⚡ Download App</a>
+      <a href="{{ site.github.repository_url }}" class="btn">⭐ Star On GitHub</a>
+      <a href="https://github.com/alexmercerind/harmonoid/releases/download/v0.0.2%2B2/harmonoid-v0.0.2+2-pre-release.apk" class="btn">⚡ Download App</a>
     </header>
 
     <main id="content" class="main-content" role="main">
