feat: android 12 splash screen

--- a/android/app/src/main/res/values-night/colors.xml
+++ b/android/app/src/main/res/values-night/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="splash">#6200EA</color>
+    <color name="splash">#1A1A1A</color>
 </resources>
