--- a/android/app/src/main/res/drawable-night/launch_background.xml
+++ b/android/app/src/main/res/drawable-night/launch_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/harmonoid" />
+    <item android:drawable="@color/splash" />
     <item>
         <bitmap
             android:gravity="center"
