--- a/android/app/src/main/res/drawable-v23/launch_background.xml
+++ b/android/app/src/main/res/drawable-v23/launch_background.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/splash" />
-    <item>
-        <bitmap
-            android:gravity="center"
-            android:src="@drawable/splash_compat" />
-    </item>
+    <item
+        android:gravity="center"
+        android:drawable="@drawable/ic_splash" />
 </layer-list>
